force-app/main/default/objects/Obra_Social__c/Obra_Social__c.object-meta.xml
<CustomObject>
    <label>Obra Social</label>
    <nameField>
        <displayFormat>OS-{00000}</displayFormat>
        <label>Obra Social Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obras Sociales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>