force-app/main/default/objects/Obra_Social__c/fields/Obra_Social__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social__c</fullName>
    <label>Obra Social</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>